--- a/languages/dashboard-feed-widget.po
+++ b/languages/dashboard-feed-widget.po
@@ -10,7 +10,7 @@ msgstr ""
 
 #. Text in echo
 #: dashboard-feed-widget.php:131
-msgid "Below you can adjust the output of the SO Dashboard Feed Widget. You can change the title of the widget, the feed URL and the amount of feed items to show."
+msgid "Below you can adjust the output of the SO Dashboard Feed Widget. You can change the title of the widget, the feed URL, the amount of feed items to show and the background color of the widget."
 msgstr ""
 
 #. Text in echo
